# scrutipy

./: Cargo.toml  README.md  pyproject.toml  scrutiny_tests.Rmd  scrutiny_tests.nb.html  tarpaulin-report.html
.github/workflows/: CI.yml  mac.yml  ubuntu.yml  windows.yml
src/: closure.rs  confusion.rs  debit-table.R  debit.rs  debit_map.rs  debit_map_df.rs  grim.rs  grim_map.rs  grim_map_df.rs  grim_stats.rs  grim_u.rs  grimmer.rs  lib.rs  main.rs  pyfunctions.rs  rounding.rs  rounding_tests.rs  sd_binary.rs  test_grim.rs  test_utils.rs  utils.rs
tests/: test_functions.py
