[package]
name = "scrutipy_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "scrutipy_rs"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.1"
num = "0.4.3"
numpy = "0.23.0"
polars = "0.46.0"
pyo3 = "0.23.3"
pyo3-polars = "0.20.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.12"

[package.metadata.maturin]
name = "scrutipy_rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)']}
